--- a/PPPO_LazarAcimovic_IT35_2021.ipynb
+++ b/PPPO_LazarAcimovic_IT35_2021.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/LazarAcimovic/PPPO_LazarAcimovic_IT35-2021/blob/main/PPPO_LazarAcimovic_IT35_2021.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "4IUOZhkSImpm"
       },
       "source": [
@@ -1027,7 +1037,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
